updating content for Backtracking

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       </div>
       <div id='feedback-container'> </div>
       <div id='run-button-container'>
+        <select id="AI" name="AI_Algorithm">
+          <option value="AB_IDA*">Alpha Beta IDA*</option>
+          <option value="BackTracking" selected="selected">Back Tracking</option>
+        </select>
         <button id='run-button' class='ai-button'>Auto-run</button>
       </div>
     </div>
