--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       Original AI solver by <a href="https://github.com/ov3y/2048-AI">Matt Overlan</a>
     </p>
     <p>
-      New AI solver by <a href="https://github.com/sirenity">Stephen Rodriguez & Matt Stelnicki</a>
+      New AI solver by <a href="https://github.com/sirenity">Stephen Rodriguez</a>
     </p>
   </div>
 
